Fixed H1 and Rule line spacing
Chnaged css a little to create spacing between H1's and the Rule line under them.

--- a/prototype/style.css
+++ b/prototype/style.css
@@ -16,7 +16,7 @@ body{
 h1{
   font-family: eurostile, sans-serif;
   font-weight: 800;
-  margin-bottom: -0.5em;
+  margin-bottom: -0.25em;
 }
 @media screen and (min-width:1000px){
   h1{
@@ -794,7 +794,7 @@ hr{
   }
 }
 hr{
-  margin-top: 10px;
+  margin-top: 0.5em;
 }
 #schedulecontainerb{
   background-color: #E6E7E8;
